# LightSimulator

./: .gitignore  README.md
LightSimulator/: LightSimulator_V5.vcxproj  LightSimulator_V5.vcxproj.filters  imgui.ini
LightSimulator/OpenGL/glad/include/glad/: glad.h
LightSimulator/OpenGL/glad/src/: glad.c
LightSimulator/OpenGL/glfw-3.2.1/lib/: glfw3.lib
LightSimulator/OpenGL/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
LightSimulator/SQLAPI/: ReadMe.txt
LightSimulator/SQLAPI/bcc-cbxe4/lib/: sqlapibs.lib  sqlapibsd.lib  sqlapibus.lib  sqlapibusd.lib
LightSimulator/SQLAPI/bcc-cbxe5/lib/: sqlapibs.lib  sqlapibsd.lib  sqlapibus.lib  sqlapibusd.lib
LightSimulator/SQLAPI/bcc-cbxe6/lib/: sqlapibs.lib  sqlapibsd.lib  sqlapibus.lib  sqlapibusd.lib
LightSimulator/SQLAPI/bcc-cbxe7/lib/: sqlapibs.lib  sqlapibsd.lib  sqlapibus.lib  sqlapibusd.lib
LightSimulator/SQLAPI/bcc-cbxe8/lib/: sqlapibs.lib  sqlapibsd.lib  sqlapibus.lib  sqlapibusd.lib
LightSimulator/SQLAPI/lib/: sqlapi.lib  sqlapibs.LIB  sqlapibsd.LIB  sqlapibus.LIB  sqlapibusd.LIB  sqlapid.lib  sqlapis.lib  sqlapisd.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib  sqlapiusd.lib
LightSimulator/SQLAPI/samples/: bugtest.cpp  sqltest_gcc  sqltest_mingw.bat  sqltest_mvc.bat
LightSimulator/SQLAPI/vs2005/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
LightSimulator/SQLAPI/vs2005/x86_64/lib/: sqlapi.lib  sqlapid.lib  sqlapiu.lib  sqlapiud.lib
LightSimulator/SQLAPI/vs2008/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
LightSimulator/SQLAPI/vs2008/x86_64/lib/: sqlapi.lib  sqlapid.lib  sqlapiu.lib  sqlapiud.lib
LightSimulator/SQLAPI/vs2010/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
LightSimulator/SQLAPI/vs2010/x86_64/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib
LightSimulator/SQLAPI/vs2012/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
LightSimulator/SQLAPI/vs2012/x86_64/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib
LightSimulator/SQLAPI/vs2013/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
LightSimulator/SQLAPI/vs2013/x86_64/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib
LightSimulator/SQLAPI/vs2017/lib/: sqlapis.lib  sqlapius.lib
LightSimulator/SQLAPI/vs2017/x86_64/lib/: sqlapis.lib
LightSimulator/SQLAPI/vs2019/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
LightSimulator/SQLAPI/vs2019/x86_64/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib
LightSimulator/databaseManager/: dbManager.cpp  dbManager.h
LightSimulator/glad/src/: glad.c
LightSimulator/guiManager/: guiManager.cpp  guiManager.h
LightSimulator/main/: main.cpp
LightSimulator/objectManager/: objectManager.cpp  objectManager.h
LightSimulator/objectManager/object/: object.cpp  object.h  objectTemplate.cpp  objectTemplate.h
LightSimulator/objectManager/object/angleIndicator/: angleIndicator.cpp  angleIndicator.h
LightSimulator/objectManager/object/lensObject/: lensObject.h
LightSimulator/objectManager/object/lightObject/: lightObject.cpp  lightObject.h
LightSimulator/program/: program.cpp  program.h
LightSimulator/renderers/rayRenderer/: RayRenderer.cpp  RayRenderer.h
LightSimulator/renderers/spriteRenderer/: SpriteRenderer.cpp  SpriteRenderer.h
LightSimulator/resourceManager/: resourceManager.h
LightSimulator/resourceManager/texture/: texture.cpp  texture.h
LightSimulator/shader/: shader.cpp  shader.h
LightSimulator/shader/shaderFiles/: fShader.txt  rfShader.txt  rvShader.txt
LightSimulator/soil/Simple OpenGL Image Library/projects/VC9/: SOIL.sln  SOIL.vcxproj
LightSimulator_V5/: CMakeLists.txt  LightSimulator_V5.vcxproj  README.md
LightSimulator_V5/glad/include/glad/: glad.h
LightSimulator_V5/main/: main.cpp
LightSimulator_V5/resourceManager/: resourceManager.cpp
